Move shared module into a libs folder

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,7 +4,7 @@ apply from: "$rootDir/gradle/javaModule.gradle"
 archivesBaseName = 'crate-common'
 
 dependencies {
-    implementation project(':shared')
+    implementation project(':libs:shared')
     implementation project(':pgwire')
     implementation project(':es:es-server')
     implementation "com.google.code.findbugs:jsr305:${versions.jsr305}"
