--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ evaluationDependsOn(':common')
 evaluationDependsOn(':sql')
 evaluationDependsOn(':sql-parser')
 evaluationDependsOn(':dex')
-evaluationDependsOn(':shared')
+evaluationDependsOn(':libs:shared')
 evaluationDependsOn(':blob')
 evaluationDependsOn(':http')
 evaluationDependsOn(':udc')
@@ -72,7 +72,7 @@ dependencies {
     compileNotTransitive project(':sql-parser')
     compileNotTransitive project(':pgwire')
     compileNotTransitive project(':dex')
-    compileNotTransitive project(':shared')
+    compileNotTransitive project(':libs:shared')
     compileNotTransitive project(':blob')
     compileNotTransitive project(':http')
     compileNotTransitive project(':udc')
