--- a/blob/build.gradle
+++ b/blob/build.gradle
@@ -4,7 +4,7 @@ archivesBaseName = 'crate-blob'
 
 dependencies {
     implementation project(':es:es-server')
-    implementation project(':shared')
+    implementation project(':libs:shared')
     implementation project(':common')
     implementation project(':http')
     implementation project(':es:es-transport')
