--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-include 'es:es-core',
+include 'libs:shared',
+        'es:es-core',
         'es:es-x-content',
         'es:es-server',
         'es:es-plugin-classloader',
@@ -12,7 +13,6 @@ include 'es:es-core',
         'es:es-analysis-common',
         'es:es-analysis-phonetic',
         'integration-testing',
-        'shared',
         'common',
         'dex',
         'blob',
