Move dex module into libs folder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ evaluationDependsOn(':es')
 evaluationDependsOn(':common')
 evaluationDependsOn(':sql')
 evaluationDependsOn(':sql-parser')
-evaluationDependsOn(':dex')
+evaluationDependsOn(':libs:dex')
 evaluationDependsOn(':libs:shared')
 evaluationDependsOn(':blob')
 evaluationDependsOn(':http')
@@ -61,7 +61,7 @@ dependencies {
     testCompile project(path: ':sql', configuration: 'testOutput')
     testCompile("org.postgresql:postgresql:${versions.jdbc}")
     testImplementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${versions.jackson}"
-    testImplementation project(path: ':dex', configuration: 'testOutput')
+    testImplementation project(path: ':libs:dex', configuration: 'testOutput')
 
     compileNotTransitive project(':common')
     compileNotTransitive project(':es:es-core')
@@ -71,7 +71,7 @@ dependencies {
     compileNotTransitive project(':sql')
     compileNotTransitive project(':sql-parser')
     compileNotTransitive project(':pgwire')
-    compileNotTransitive project(':dex')
+    compileNotTransitive project(':libs:dex')
     compileNotTransitive project(':libs:shared')
     compileNotTransitive project(':blob')
     compileNotTransitive project(':http')
