--- a/enterprise/functions/build.gradle
+++ b/enterprise/functions/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation project(':sql')
 
     testImplementation project(path: ':sql', configuration: 'testOutput')
-    testImplementation project(path: ':dex', configuration: 'testOutput')
+    testImplementation project(path: ':libs:dex', configuration: 'testOutput')
     testImplementation project(':integration-testing')
     testImplementation "org.hamcrest:hamcrest:${versions.hamcrest}"
     testImplementation "org.postgresql:postgresql:${versions.jdbc}"
