--- a/enterprise/lang-js/build.gradle
+++ b/enterprise/lang-js/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     testImplementation project(':integration-testing')
     testImplementation project(path: ':sql', configuration: 'testOutput')
-    testImplementation project(path: ':dex', configuration: 'testOutput')
+    testImplementation project(path: ':libs:dex', configuration: 'testOutput')
     testImplementation 'org.skyscreamer:jsonassert:1.3.0'
     testImplementation "org.hamcrest:hamcrest:${versions.hamcrest}"
     testImplementation "org.postgresql:postgresql:${versions.jdbc}"
