--- a/enterprise/users/build.gradle
+++ b/enterprise/users/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     testImplementation project(':integration-testing')
     testImplementation project(':enterprise:ssl-impl')
     testImplementation project(path: ':sql', configuration: 'testOutput')
-    testImplementation project(path: ':dex', configuration: 'testOutput')
+    testImplementation project(path: ':libs:dex', configuration: 'testOutput')
     testImplementation "org.hamcrest:hamcrest:${versions.hamcrest}"
     testImplementation "org.postgresql:postgresql:${versions.jdbc}"
 }
