--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include 'libs:shared',
+        'libs:dex',
         'es:es-core',
         'es:es-x-content',
         'es:es-server',
@@ -14,7 +15,6 @@ include 'libs:shared',
         'es:es-analysis-phonetic',
         'integration-testing',
         'common',
-        'dex',
         'blob',
         'sql',
         'sql-parser',
