--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include 'libs:shared',
         'libs:dex',
+        'libs:pgwire',
         'es:es-core',
         'es:es-x-content',
         'es:es-server',
@@ -18,7 +19,6 @@ include 'libs:shared',
         'blob',
         'sql',
         'sql-parser',
-        'pgwire',
         'udc',
         'azure-discovery',
         'dns-discovery',
