Move dns-discovery to plugins/ folder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ evaluationDependsOn(':libs:shared')
 evaluationDependsOn(':blob')
 evaluationDependsOn(':http')
 evaluationDependsOn(':udc')
-evaluationDependsOn(':dns-discovery')
+evaluationDependsOn(':plugins:dns-discovery')
 
 dependencies {
     compile project(':sql')
@@ -37,7 +37,7 @@ dependencies {
     compile project(':http')
     compile project(':udc')
     compile project(':azure-discovery')
-    compile project(':dns-discovery')
+    compile project(':plugins:dns-discovery')
     compile project(':es:es-discovery-ec2')
     compile project(':es:es-repository-url')
     compile project(':es:es-repository-s3')
@@ -76,7 +76,7 @@ dependencies {
     compileNotTransitive project(':blob')
     compileNotTransitive project(':http')
     compileNotTransitive project(':udc')
-    compileNotTransitive project(':dns-discovery')
+    compileNotTransitive project(':plugins:dns-discovery')
     compileNotTransitive project(':es:es-discovery-ec2')
     compileNotTransitive project(':es:es-repository-url')
     compileNotTransitive project(':es:es-repository-s3')
