--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ include 'libs:shared',
         'sql-parser',
         'udc',
         'azure-discovery',
-        'dns-discovery',
+        'plugins:dns-discovery',
         'app',
         'blackbox',
         'ssl',
