--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,7 @@ include 'libs:shared',
         'sql',
         'sql-parser',
         'udc',
-        'azure-discovery',
+        'plugins:azure-discovery',
         'plugins:dns-discovery',
         'app',
         'blackbox',
