Move es-discovery-ec2 to plugins

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile project(':udc')
     compile project(':plugins:azure-discovery')
     compile project(':plugins:dns-discovery')
-    compile project(':es:es-discovery-ec2')
+    compile project(':plugins:es-discovery-ec2')
     compile project(':es:es-repository-url')
     compile project(':es:es-repository-s3')
     compile project(':es:es-repository-azure')
@@ -77,7 +77,7 @@ dependencies {
     compileNotTransitive project(':http')
     compileNotTransitive project(':udc')
     compileNotTransitive project(':plugins:dns-discovery')
-    compileNotTransitive project(':es:es-discovery-ec2')
+    compileNotTransitive project(':plugins:es-discovery-ec2')
     compileNotTransitive project(':es:es-repository-url')
     compileNotTransitive project(':es:es-repository-s3')
     compileNotTransitive project(':es:es-repository-azure')
