--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile project(':plugins:azure-discovery')
     compile project(':plugins:dns-discovery')
     compile project(':plugins:es-discovery-ec2')
-    compile project(':es:es-repository-url')
+    compile project(':plugins:es-repository-url')
     compile project(':es:es-repository-s3')
     compile project(':es:es-repository-azure')
     compile project(':es:es-transport')
@@ -78,7 +78,7 @@ dependencies {
     compileNotTransitive project(':udc')
     compileNotTransitive project(':plugins:dns-discovery')
     compileNotTransitive project(':plugins:es-discovery-ec2')
-    compileNotTransitive project(':es:es-repository-url')
+    compileNotTransitive project(':plugins:es-repository-url')
     compileNotTransitive project(':es:es-repository-s3')
     compileNotTransitive project(':es:es-repository-azure')
     compileNotTransitive project(':es:es-transport')
