--- a/sql/build.gradle
+++ b/sql/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     // They are required by 1) tests in :sql 2) modules depending on :sql.
     // They also need to be added in :app because :sql is declared non-transitive
     // in :app (=dependencies of :sql won't be included).
-    compile project(":es:es-repository-url")
+    compile project(":plugins:es-repository-url")
     compile project(":es:es-repository-s3")
     compile project(":es:es-repository-azure")
     compile project(":es:es-analysis-common")
