Move es-repository-s3 to plugins

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compile project(':plugins:dns-discovery')
     compile project(':plugins:es-discovery-ec2')
     compile project(':plugins:es-repository-url')
-    compile project(':es:es-repository-s3')
+    compile project(':plugins:es-repository-s3')
     compile project(':es:es-repository-azure')
     compile project(':es:es-transport')
     compile project(':es:es-analysis-common')
@@ -79,7 +79,7 @@ dependencies {
     compileNotTransitive project(':plugins:dns-discovery')
     compileNotTransitive project(':plugins:es-discovery-ec2')
     compileNotTransitive project(':plugins:es-repository-url')
-    compileNotTransitive project(':es:es-repository-s3')
+    compileNotTransitive project(':plugins:es-repository-s3')
     compileNotTransitive project(':es:es-repository-azure')
     compileNotTransitive project(':es:es-transport')
     compileNotTransitive project(':es:es-analysis-common')
