--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,6 @@ include 'libs:shared',
         'es:es-plugin-classloader',
         'es:es-testing',
         'es:es-transport',
-        'es:es-repository-s3',
         'es:es-repository-azure',
         'es:es-repository-hdfs',
         'es:es-analysis-common',
@@ -22,6 +21,7 @@ include 'libs:shared',
         'plugins:dns-discovery',
         'plugins:es-discovery-ec2',
         'plugins:es-repository-url',
+        'plugins:es-repository-s3',
         'app',
         'blackbox',
         'ssl',
