--- a/sql/build.gradle
+++ b/sql/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     // They also need to be added in :app because :sql is declared non-transitive
     // in :app (=dependencies of :sql won't be included).
     compile project(":plugins:es-repository-url")
-    compile project(":es:es-repository-s3")
+    compile project(":plugins:es-repository-s3")
     compile project(":es:es-repository-azure")
     compile project(":es:es-analysis-common")
 }
