Move es-repository-azure to plugins

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     compile project(':plugins:es-discovery-ec2')
     compile project(':plugins:es-repository-url')
     compile project(':plugins:es-repository-s3')
-    compile project(':es:es-repository-azure')
+    compile project(':plugins:es-repository-azure')
     compile project(':es:es-transport')
     compile project(':es:es-analysis-common')
     compile project(':es:es-analysis-phonetic')
@@ -80,7 +80,7 @@ dependencies {
     compileNotTransitive project(':plugins:es-discovery-ec2')
     compileNotTransitive project(':plugins:es-repository-url')
     compileNotTransitive project(':plugins:es-repository-s3')
-    compileNotTransitive project(':es:es-repository-azure')
+    compileNotTransitive project(':plugins:es-repository-azure')
     compileNotTransitive project(':es:es-transport')
     compileNotTransitive project(':es:es-analysis-common')
     compileNotTransitive project(':es:es-analysis-phonetic')
